--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app.presentacion.controlador.impl.UsarDBPreguntas"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_usar_db_preguntas">
+
+        </activity>
 
     </application>
 
