--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_lista_preguntas">
         </activity>
+        <activity android:name=".app.presentacion.controlador.impl.EditarPregunta"
+        android:configChanges="orientation|keyboardHidden|screenSize"
+        android:label="@string/title_activity_editar_pregunta">
+    </activity>
 
     </application>
 
