--- a/DomainModel/app/src/main/AndroidManifest.xml
+++ b/DomainModel/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="juego.taes.domainmodel.MainActivity"
+            android:name=".Example.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
