--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         <activity
             android:name=".app.presentacion.controlador.impl.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,38 +20,47 @@
         </activity>
         <activity android:name=".app.presentacion.controlador.impl.UsarDB"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_usar_db">
         </activity>
         <activity android:name=".app.presentacion.controlador.impl.CrearDB"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_crear_db">
         </activity>
         <activity android:name=".app.presentacion.controlador.impl.BajarDB"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_bajar_db">
         </activity>
         <activity android:name=".app.presentacion.controlador.impl.ListaBasesDatos"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_dbs">
         </activity>
         <activity android:name=".app.presentacion.controlador.impl.ListaPreguntas"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_lista_preguntas">
         </activity>
         <activity android:name=".app.presentacion.controlador.impl.CrearPregunta"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_editar_pregunta">
         </activity>
         <activity android:name="tk.theunigame.unigame.app.presentacion.controlador.impl.ListaUniversidades"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_universidades">
         </activity>
         <activity android:name="tk.theunigame.unigame.app.presentacion.controlador.impl.ListaCarreras"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_carreras">
         </activity>
         <activity android:name="tk.theunigame.unigame.app.presentacion.controlador.impl.ListaAsignaturas"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_asignaturas">
         </activity>
 
