Entrada en AndroidManifest de la JuegoIndividual.java

--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:screenOrientation="portrait"
             android:label="@string/title_activity_asignaturas">
         </activity>
+        <activity android:name="tk.theunigame.unigame.app.presentacion.controlador.impl.JuegoIndividual"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_juego_individual">
+        </activity>
 
     </application>
 
