--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -7,17 +7,23 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/FullscreenTheme" >
-        <activity
-            android:name=".app.presentacion.controlador.impl.MainActivity"
+        android:theme="@style/Base.V21.Theme.AppCompat" >
+
+        <activity android:name=".app.presentacion.controlador.impl.LoginMain"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
-            android:label="@string/title_activity_main">
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".app.presentacion.controlador.impl.MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_main">
         </activity>
         <activity android:name=".app.presentacion.controlador.impl.UsarDB"
             android:configChanges="orientation|keyboardHidden|screenSize"
