--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:screenOrientation="portrait"
             android:label="@string/title_activity_main">
         </activity>
-        <activity android:name=".app.presentacion.controlador.impl.UsarDB"
+        <activity android:name=".app.presentacion.controlador.impl.GestionarDB"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_usar_db">
