--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -75,7 +75,12 @@
             android:screenOrientation="portrait"
             android:label="@string/title_activity_juego_individual">
         </activity>
-        <activity android:name="tk.theunigame.unigame.app.presentacion.controlador.impl.ListaAsignaturasCrearDB"
+        <activity android:name=".app.presentacion.controlador.impl.ListaAsignaturasSinCB"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_asignaturas">
+        </activity>
+        <activity android:name=".app.presentacion.controlador.impl.ListaBasesDatosSinCB"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_dbs">
