--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -53,8 +53,15 @@
         <activity android:name=".app.presentacion.controlador.impl.CrearPregunta"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
-            android:label="@string/title_activity_editar_pregunta">
+            android:label="Crear Pregunta">
         </activity>
+
+        <activity android:name=".app.presentacion.controlador.impl.EditarPregunta"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:label="Editar Pregunta">
+        </activity>
+
         <activity android:name="tk.theunigame.unigame.app.presentacion.controlador.impl.ListaUniversidades"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
