--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app.presentacion.controlador.impl.Cargar"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_cargar">
+        </activity>
         <activity
             android:name=".app.presentacion.controlador.impl.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
