--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:screenOrientation="portrait"
             android:label="@string/title_activity_crear_db">
         </activity>
+        <activity android:name=".app.presentacion.controlador.impl.EstadisticasPartida"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_estadisticas_partida">
+        </activity>
         <activity android:name=".app.presentacion.controlador.impl.BajarDB"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
