--- a/android-project/UniGame/app/src/main/AndroidManifest.xml
+++ b/android-project/UniGame/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity android:name=".app.presentacion.controlador.impl.LoginMain"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
-            android:label="@string/title_activity_login">
+            android:label="Unigame">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
